tests/NormalTests/paczka1/fuzzy1/58499400.err
Error in line 4: COXBFG A452 56,1
Error in line 11: jmb A202 47,0
Error in line 20: M4OdQFCqqek A202 91,5
Error in line 23: COXBFG S524 1,5
